@@ -1,6 +1,9 @@
 # ChangeLog file for stream
 # This file is updated with Maddlog
 
+* Tue Aug  8 2017 Sjoerd Mullender <sjoerd@acm.org>
+- Removed function wbstream.
+
 * Mon Aug  7 2017 Sjoerd Mullender <sjoerd@acm.org>
 - Removed functions udp_rastream and udp_wastream.
 - Removed functions socket_rstream and socket_wstream.
